# cpp_web_scraper

./: CMakeLists.txt  README.md
src/: html_parser.cpp  html_parser.hpp  http_client.cpp  http_client.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  qt_main.cpp
